added AssetsLibrary and MobileCoreServices frameworks

--- a/plugin.xml
+++ b/plugin.xml
@@ -49,10 +49,13 @@
         <resource-file src="src/ios/HockeySDK.embeddedframework/Resources/HockeySDK.xcconfig" />
 
         <framework src="src/ios/HockeySDK.embeddedframework/HockeySDK.framework" custom="true"/>
+        <framework src="AssetsLibrary.framework" />
         <framework src="CoreText.framework" />
         <framework src="CoreGraphics.framework" />
         <framework src="Foundation.framework" />
+        <framework src="MobileCoreServices.framework" />
         <framework src="QuartzCore.framework" />
+        <framework src="QuickLook.framework" />
         <framework src="Security.framework" />
         <framework src="SystemConfiguration.framework" />
         <framework src="UIKit.framework" />
