--- a/plugin.xml
+++ b/plugin.xml
@@ -46,6 +46,8 @@
             </feature>
         </config-file>
 
+        <dependency id="org.nypr.cordova.nslogger-cocoalumberjack-connector-plugin" url="https://github.com/wnyc/cordova-plugin-nslogger-cocoalumberjack-connector.git"  />
+
         <header-file src="src/ios/HockeyAppPlugin.h" />
 
         <source-file src="src/ios/HockeyAppPlugin.m" />
