--- a/plugin.xml
+++ b/plugin.xml
@@ -17,6 +17,7 @@
     <!-- android -->
     <platform name="android">
         <preference name="ANDROID_API_KEY"/>
+        <preference name="IS_STORE"/>
       
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="HockeyAppPlugin" >
@@ -36,6 +37,7 @@
         </config-file>
         <config-file target="AndroidManifest.xml" parent="application">
           <meta-data android:name="hockey_app_api_key" android:value="$ANDROID_API_KEY"/>
+          <meta-data android:name="hockey_app_is_store" android:value="$IS_STORE"/>
         </config-file>
 
         <source-file src="src/android/HockeyAppPlugin.java" target-dir="src/org/nypr/cordova/hockeyappplugin/" />
